2014-10-17 Ben Shi <powerstudio1st AT 163.com>
	* device/lib/stm8/Makefile.in:
	* device/stm8/_modulong.s:
	* device/stm8/_divulong.s:
	  Optimized according to their c origination.

2014-10-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve error messages for unimplemented unused return value.

2014-10-14 Ben Shi <powerstudio1st AT 163.com>
	* device/stm8/_modsint.s:
	* device/stm8/_mullong.s:
	  Optimized with more efficient instructions.
	* device/stm8/_mulint.s:
	  Reformat to more readable.

2014-10-13 Philipp Klaus Krause <pkk AT spth.de>

	* device/stm8/_divsint.s:
	  Optimized signed division.

2014-10-11 Ben Shi <powerstudio1st AT 163.com>
	* src/stm8/gen.c:
	  Delete temporary code stm_sub_func().
	* device/stm8/_modsint_stm8.s:
	* device/stm8/_mulint_stm8.s:
	* device/stm8/_divsint_stm8.s:
	* device/stm8/_mullong_stm8.s:
	  Deleted.
	* device/stm8/_modsint.s:
	* device/stm8/_mulint.s:
	* device/stm8/_divsint.s:
	* device/stm8/_mullong.s:
	  Added.
	* device/stm8/Makefile.in:
	  Use the above new added .s files.

2014-10-09 Ben Shi <powerstudio1st AT 163.com>
	* src/stm8/gen.c:
	  Add stm_sub_func() for future more stm8 optimized functions.
	* src/stm8/peeph.def:
	  Remove redundant rules.

2014-10-03 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/cinc2h.pl: Updated to the gputils-1.4.0 .

2014-09-29 Ben Shi <powerstudio1st AT 163.com>
	* device/lib/stm8/_mullong_stm8.s:
	* device/lib/stm8/Makefile.in:
	  stm8 optimized version of _mullong.
	* src/stm8/peeph.def:
	  add new rules to utilize the above optimized functions.

2014-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-gbz80.def:
	  Removed or simplification peepholes.

2014-09-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c:
	  Remove negation by inverting jump condition.
	* src/SDCCcse.c:
	  Remove cast at conditional jump.
	* device/include/ctype.h:
	  Simplify classification functions.
